--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,9 @@
     <nav class="navbar">
       <div><strong>Checkpoint</strong></div>
       <div>
-        <a href="#home">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#sponsor">Sponsor Us!</a>
+        <a href="{{ url_for('home') }}">Home</a>
+        <a href="{{ url_for('contact') }}">Contact</a>
+        <a href="{{ url_for('sponsor') }}">Sponsor</a>
       </div>
     </nav>
   </header>
