--- a/templates/sponsor.html
+++ b/templates/sponsor.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav class="navbar">
-            <span>My Website</span>
+            <div><strong>Checkpoint</strong></div>
             <div>
                 <a href="{{ url_for('home') }}">Home</a>
                 <a href="{{ url_for('contact') }}">Contact</a>
