--- a/templates/home.html
+++ b/templates/home.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkpoint</title>
-  <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" xintegrity="sha512-Fo3rlalDLuLwYc+B6/Xv+xQ2vL/j7b1A1v5TzJ8lKzF5W8w7y2rTzB6zR0L/sXq+i2sP7Gf1y6tY9z2h0f7A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body>
   <nav class="fixed-navbar">
     <ul class="nav-list">
-        <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="#home-section" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="#about-event-section" class="nav-link">About</a></li>
         <li class="nav-item"><a href="#sponsor-us-section" class="nav-link">Sponsor Us</a></li>
         <li class="nav-item"><a href="#contact-us-section" class="nav-link">Contact</a></li>
     </ul>
   </nav>
 
-  <div class="header-div">
+  <div id="home-section" class="header-div">
     <div class="main-content-block">
         <h1>Join us at CheckPoint!</h1>
         <h1 id="typewriter-text"></h1>
@@ -31,15 +32,19 @@
             <button class="action-button secondary"><i class="fab fa-discord"></i> Join our Discord</button>
         </div>
     </div>
+    <div class="header-image-container">
+       <img src="{{ url_for('static', filename='Group_1.png') }}">
+    </div>
   </div>
 
   <section id="about-event-section" class="about-event-section">
+  <section class="about-left">
     <h2>What is CheckPoint?</h2>
     <p>CheckPoint is an annual hackathon designed to bring together students, developers, and tech enthusiasts from around the globe. It's a 48-hour event where participants collaborate to build innovative solutions, learn new technologies, and network with mentors and industry professionals. Our goal is to foster creativity, problem-solving, and a passion for technology in a fun and challenging environment.</p>
 
     <h3>When is CheckPoint?</h3>
     <p>Mark your calendars! CheckPoint will take place from <strong>August 29th to August 31st, 2024</strong>. Get ready for an intense weekend of coding and creation!</p>
-
+  </section>
     <div class="faq-container">
         <details>
             <summary>Who can attend CheckPoint?</summary>
@@ -144,7 +149,6 @@
         </form>
     </div>
   </section>
-
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
- <script src="{{ url_for('static', filename='script.js') }}"></script>
 </html>
