--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
   </div>
 
   <section id="about-event-section" class="about-event-section">
-    <div class="about-content-wrapper"> <!-- New wrapper for about-left and calendar -->
+    <div class="about-content-wrapper">
         <section class="about-left">
             <h2>What is CheckPoint?</h2>
             <p>CheckPoint is an annual hackathon designed to bring together students, developers, and tech enthusiasts from around the globe. It's a 48-hour event where participants collaborate to build innovative solutions, learn new technologies, and network with mentors and industry professionals. Our goal is to foster creativity, problem-solving, and a passion for technology in a fun and challenging environment.</p>
@@ -64,13 +64,11 @@
                 <span>Sat</span>
             </div>
             <div id="calendar-days" class="calendar-days">
-                <!-- Calendar days will be generated here by JavaScript -->
             </div>
              <div class="calendar-legend">
                 <span class="legend-item"><span class="legend-color highlight"></span> CheckPoint Dates</span>
             </div>
         </div>
-        <!-- End New Calendar Section -->
 
     </div>
 
