--- a/templates/home.html
+++ b/templates/home.html
@@ -44,10 +44,9 @@
             <p>CheckPoint is an annual hackathon designed to bring together students, developers, and tech enthusiasts from around the globe. It's a 48-hour event where participants collaborate to build innovative solutions, learn new technologies, and network with mentors and industry professionals. Our goal is to foster creativity, problem-solving, and a passion for technology in a fun and challenging environment.</p>
 
             <h3>When is CheckPoint?</h3>
-            <p>Mark your calendars! CheckPoint will take place from <strong>August 29th to August 31st, 2024</strong>. Get ready for an intense weekend of coding and creation!</p>
+           <p>Mark your calendars! CheckPoint will take place from <strong>September 5th to September 7th, 2025</strong>. Get ready for an intense weekend of coding and creation!</p>
         </section>
 
-        <!-- New Calendar Section -->
         <div class="calendar-container">
             <div class="calendar-header">
                 <button id="prevMonth" class="calendar-nav-button">&lt;</button>
@@ -147,7 +146,7 @@
     </div>
     <p style="margin-top: 40px; max-width: 800px;">Ready to make an impact? Download our sponsorship package for more details on tiers and benefits, or contact us directly to discuss a custom partnership!</p>
     <div class="button-container">
-        <button class="action-button">Download Sponsorship Package</button>
+        <a href="/static/Checkpoint-2025-Prospectus.pdf" download class="action-button">Download Sponsorship Package</a>
     </div>
   </section>
 
